# bot-logger

./: .gitignore  README.md  Todo.md  bot.py  main.py  pyproject.toml  state.json
app/: BotLogger.py  main.css
app/utils/: frame_loader.py
app/widgets/: Avatar.py
tui/: textual.css  textual.py
tui/animations/: prototyping.py  sitting.py
tui/learning/: example.py  textual.css
